done 2nd section(full)

--- a/index.html
+++ b/index.html
@@ -30,14 +30,49 @@
   </div>
 </header>
 <section>
-  <div class="container-team">
+  <div class="services">
+    <div class="title-wrap">
+      <h2>SERVICES WE PROVIDE</h2>
+      <img src='src/images/Line.png' class='line'>
+      <p>We are working with both individuals and business fron all over the glove <br>
+        to create awesome websites and applications    </p>
+    </div>
+    <div class='container'>
+      <div class="item-container">
+        <img src='/src/images/Flag icon.png'>
+        <h4 class='name_service'>BRANDING</h4>
+        <div class="service-descr">Lorem ipsum dolor sit amet, 
+            consectetuer adipiscing elit, sed diam nonummy nibh</div>
+      </div>
+      <div class="item-container">
+        <img src='/src/images/Crayon_icon.png' class='crayon_img'>
+        <h4 class='name_service'>DESIGN</h4>
+        <div class="service-descr">Sed ut perspiciatis unde <br>
+           omnis iste natus error sit <br> voluptatem</div>
+      </div>
+      <div class="item-container">
+        <img src='/src/images/Gears_icon.png'>
+        <h4 class='name_service'>DEVELOPMENT</h4>
+        <div class="service-descr">At vero eos et accusamus et iusto
+           odio dignissimos qui blanditiis praesentium.</div>
+      </div>
+      <div class="item-container">
+        <img src='/src/images/Rocket_icon.png' class='rocket_img'>
+        <h4 class='name_service'>ROCKET SCIENCE</h4>
+        <div class="service-descr">Et harum quidem rerum est et expedita 
+          distinctio. Nam libero tempore.</div>
+      </div>    
+    </div>
+  </div>
+  
+  <div class="team">
     <div class="title-wrap">
       <h2>MEET OUR BEAUTIFUL TEAM</h2>
       <img src='src/images/Line.png' class='line'>
       <p>We are a small team of designers and developers, who help brands with big ideas.</p>
     </div>
-    <div class='team-container'>
-      <div class="person-container">
+    <div class='container'>
+      <div class="item-container">
         <img src='/src/images/avatar.png'>
         <h3>ANNE HATHAWAY</h3>
         <div class="status">Ceo/Marketing Guru</div>
@@ -51,7 +86,7 @@
           <img src='src/images/Mail_icon.png' alt='Maleru'>
         </div>  
       </div>
-      <div class="person-container">
+      <div class="item-container">
           <img src='/src/images/avatar.png'>
           <h3>ANNE HATHAWAY</h3>
           <div class="status">Ceo/Marketing Guru</div>
@@ -65,7 +100,7 @@
             <img src='src/images/Mail_icon.png' alt='Maleru'>
           </div>  
         </div>
-      <div class="person-container">
+      <div class="item-container">
         <img src='/src/images/avatar.png'>
         <h3>ANNE HATHAWAY</h3>
         <div class="status">Ceo/Marketing Guru</div>
@@ -79,7 +114,7 @@
           <img src='src/images/Mail_icon.png' alt='Maleru'>
         </div>  
       </div>
-      <div class="person-container">
+      <div class="item-container">
           <img src='/src/images/avatar.png'>
           <h3>ANNE HATHAWAY</h3>
           <div class="status">Ceo/Marketing Guru</div>
