--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
     </div>
     <div class='container'>
       <div class="item-container">
-        <img src='/src/images/Flag icon.png'>
+        <img src='/src/images/Flag icon.png' alt='Flag'>
         <h4 class='name_service'>BRANDING</h4>
         <div class="service-descr">Lorem ipsum dolor sit amet, 
             consectetuer adipiscing elit, sed diam nonummy nibh</div>
       </div>
       <div class="item-container">
-        <img src='/src/images/Crayon_icon.png' class='crayon_img'>
+        <img src='/src/images/Crayon_icon.png' class='crayon_img' alt='crayon'>
         <h4 class='name_service'>DESIGN</h4>
         <div class="service-descr">Sed ut perspiciatis unde <br>
            omnis iste natus error sit <br> voluptatem</div>
       </div>
       <div class="item-container">
-        <img src='/src/images/Gears_icon.png'>
+        <img src='/src/images/Gears_icon.png' alt='gears'>
         <h4 class='name_service'>DEVELOPMENT</h4>
         <div class="service-descr">At vero eos et accusamus et iusto
            odio dignissimos qui blanditiis praesentium.</div>
       </div>
       <div class="item-container">
-        <img src='/src/images/Rocket_icon.png' class='rocket_img'>
+        <img src='/src/images/Rocket_icon.png' class='rocket_img' alt='rocket'>
         <h4 class='name_service'>ROCKET SCIENCE</h4>
         <div class="service-descr">Et harum quidem rerum est et expedita 
           distinctio. Nam libero tempore.</div>
@@ -76,9 +76,9 @@
         <img src='/src/images/avatar.png'>
         <h3>ANNE HATHAWAY</h3>
         <div class="status">Ceo/Marketing Guru</div>
-        <p>Lorem ipsum dolor sit amet, 
-            consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-             laoreet dolore magna.</p>
+        <p>Lorem ipsum dolor sit amet, <br>
+            consectetuer adipiscing elit,<br> sed diam nonummy nibh<br> euismod tincidunt ut
+             laoreet<br> dolore magna.</p>
         <div class="social_icons">
           <img src='src/images/Fb_icon.png' alt='facebook'>
           <img src='src/images/Twitter_icon.png' alt='twitter'>
@@ -88,13 +88,10 @@
       </div>
       <div class="item-container">
           <img src='/src/images/avatar.png'>
-          <h3>ANNE HATHAWAY</h3>
-          <div class="status">Ceo/Marketing Guru</div>
-          <p>Lorem ipsum dolor sit amet, 
-              consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-               laoreet dolore magna.</p>
+          <h3>KATE UPTON</h3>
+          <div class="status">Creative Director</div>
+          <p>Duis aute irure dolor in in <br> voluptate velit esse cillum <br> dolore fugiat nulla pariatur.<br> Excepteur sint occaecat non<br> diam proiden</p>
           <div class="social_icons">
-            <img src='src/images/Fb_icon.png' alt='facebook'>
             <img src='src/images/Twitter_icon.png' alt='twitter'>
             <img src='src/images/LinkedIn_icon.png' alt='LinkIn'>
             <img src='src/images/Mail_icon.png' alt='Maleru'>
@@ -102,11 +99,9 @@
         </div>
       <div class="item-container">
         <img src='/src/images/avatar.png'>
-        <h3>ANNE HATHAWAY</h3>
-        <div class="status">Ceo/Marketing Guru</div>
-        <p>Lorem ipsum dolor sit amet, 
-            consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-             laoreet dolore magna.</p>
+        <h3>OLIVIA WILDE</h3>
+        <div class="status">Lead Designer</div>
+        <p>Nemo enim ipsam voluptas<br> sit aspernatur aut odit aut<br> fugit, sed quia consequuntur<br> magni dolores eos qui ratio-<br>ne voluptatem nesciun</p>
         <div class="social_icons">
           <img src='src/images/Fb_icon.png' alt='facebook'>
           <img src='src/images/Twitter_icon.png' alt='twitter'>
@@ -115,19 +110,16 @@
         </div>  
       </div>
       <div class="item-container">
-          <img src='/src/images/avatar.png'>
-          <h3>ANNE HATHAWAY</h3>
-          <div class="status">Ceo/Marketing Guru</div>
-          <p>Lorem ipsum dolor sit amet, 
-              consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-               laoreet dolore magna.</p>
-          <div class="social_icons">
-            <img src='src/images/Fb_icon.png' alt='facebook'>
-            <img src='src/images/Twitter_icon.png' alt='twitter'>
-            <img src='src/images/LinkedIn_icon.png' alt='LinkIn'>
-            <img src='src/images/Mail_icon.png' alt='Maleru'>
-          </div>  
-        </div>
+        <img src='/src/images/avatar.png'>
+        <h3>ASHLEY GREENE</h3>
+        <div class="status">Ceo / Developer</div>
+        <p>Sed ut perspiciatis unde<br> omnis iste natus error sit<br> voluptatem accusantium<br> doloremque laudantium,<br> totam rem aperiam.</p>
+        <div class="social_icons">
+          <img src='src/images/Fb_icon.png' alt='facebook'>
+          <img src='src/images/Twitter_icon.png' alt='twitter'>
+          <img src='src/images/Mail_icon.png' alt='Maleru'>
+        </div>  
+      </div>
       
 
 
