fixed header and two sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </nav>  
     </div>
-    <h1>Hi there! We are the new kids on the block <br> 
+    <h1>Hi there! We are the new kids on the block  
         and we build awesome websites and mobile apps.</h1>
     <button class='header_button'>WORK WITH US!</button>
   </div>
@@ -32,33 +32,33 @@
 <section>
   <div class="services">
     <div class="title-wrap">
-      <h2>SERVICES WE PROVIDE</h2>
+      <h2>Services we provide</h2>
       <img src='src/images/Line.png' class='line'>
-      <p>We are working with both individuals and business fron all over the glove <br>
+      <p>We are working with both individuals and business fron all over the glove 
         to create awesome websites and applications    </p>
     </div>
     <div class='container'>
       <div class="item-container">
         <img src='/src/images/Flag icon.png' alt='Flag'>
-        <h4 class='name_service'>BRANDING</h4>
+        <h4 class='name_service'>Branding</h4>
         <div class="service-descr">Lorem ipsum dolor sit amet, 
             consectetuer adipiscing elit, sed diam nonummy nibh</div>
       </div>
       <div class="item-container">
         <img src='/src/images/Crayon_icon.png' class='crayon_img' alt='crayon'>
-        <h4 class='name_service'>DESIGN</h4>
-        <div class="service-descr">Sed ut perspiciatis unde <br>
-           omnis iste natus error sit <br> voluptatem</div>
+        <h4 class='name_service'>Design</h4>
+        <div class="service-descr">Sed ut perspiciatis unde 
+           omnis iste natus error sit  voluptatem</div>
       </div>
       <div class="item-container">
         <img src='/src/images/Gears_icon.png' alt='gears'>
-        <h4 class='name_service'>DEVELOPMENT</h4>
+        <h4 class='name_service'>Development</h4>
         <div class="service-descr">At vero eos et accusamus et iusto
            odio dignissimos qui blanditiis praesentium.</div>
       </div>
       <div class="item-container">
         <img src='/src/images/Rocket_icon.png' class='rocket_img' alt='rocket'>
-        <h4 class='name_service'>ROCKET SCIENCE</h4>
+        <h4 class='name_service'>Rocket science</h4>
         <div class="service-descr">Et harum quidem rerum est et expedita 
           distinctio. Nam libero tempore.</div>
       </div>    
@@ -67,57 +67,57 @@
   
   <div class="team">
     <div class="title-wrap">
-      <h2>MEET OUR BEAUTIFUL TEAM</h2>
+      <h2>Meet our beatiful team</h2>
       <img src='src/images/Line.png' class='line'>
       <p>We are a small team of designers and developers, who help brands with big ideas.</p>
     </div>
     <div class='container'>
       <div class="item-container">
         <img src='/src/images/avatar.png'>
-        <h3>ANNE HATHAWAY</h3>
+        <h3>Anne Hathaway</h3>
         <div class="status">Ceo/Marketing Guru</div>
-        <p>Lorem ipsum dolor sit amet, <br>
-            consectetuer adipiscing elit,<br> sed diam nonummy nibh<br> euismod tincidunt ut
-             laoreet<br> dolore magna.</p>
+        <p>Lorem ipsum dolor sit amet, 
+            consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+             laoreet dolore magna.</p>
         <div class="social_icons">
-          <img src='src/images/Fb_icon.png' alt='facebook'>
-          <img src='src/images/Twitter_icon.png' alt='twitter'>
-          <img src='src/images/LinkedIn_icon.png' alt='LinkIn'>
-          <img src='src/images/Mail_icon.png' alt='Maleru'>
+          <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
+          <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
+          <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
+          <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru(seriosly:)'></a>
         </div>  
       </div>
       <div class="item-container">
           <img src='/src/images/avatar.png'>
-          <h3>KATE UPTON</h3>
+          <h3>Kate Upton</h3>
           <div class="status">Creative Director</div>
-          <p>Duis aute irure dolor in in <br> voluptate velit esse cillum <br> dolore fugiat nulla pariatur.<br> Excepteur sint occaecat non<br> diam proiden</p>
+          <p>Duis aute irure dolor in in  voluptate velit esse cillum  dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proiden</p>
           <div class="social_icons">
-            <img src='src/images/Twitter_icon.png' alt='twitter'>
-            <img src='src/images/LinkedIn_icon.png' alt='LinkIn'>
-            <img src='src/images/Mail_icon.png' alt='Maleru'>
+            <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
+            <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
+            <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru'></a>
           </div>  
         </div>
       <div class="item-container">
         <img src='/src/images/avatar.png'>
-        <h3>OLIVIA WILDE</h3>
+        <h3>Olivia Wilde</h3>
         <div class="status">Lead Designer</div>
-        <p>Nemo enim ipsam voluptas<br> sit aspernatur aut odit aut<br> fugit, sed quia consequuntur<br> magni dolores eos qui ratio-<br>ne voluptatem nesciun</p>
+        <p>Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratio-ne voluptatem nesciun</p>
         <div class="social_icons">
-          <img src='src/images/Fb_icon.png' alt='facebook'>
-          <img src='src/images/Twitter_icon.png' alt='twitter'>
-          <img src='src/images/LinkedIn_icon.png' alt='LinkIn'>
-          <img src='src/images/Mail_icon.png' alt='Maleru'>
+          <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
+          <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
+          <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
+          <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru'></a>
         </div>  
       </div>
       <div class="item-container">
         <img src='/src/images/avatar.png'>
-        <h3>ASHLEY GREENE</h3>
+        <h3>Ashley Greene</h3>
         <div class="status">Ceo / Developer</div>
-        <p>Sed ut perspiciatis unde<br> omnis iste natus error sit<br> voluptatem accusantium<br> doloremque laudantium,<br> totam rem aperiam.</p>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
         <div class="social_icons">
-          <img src='src/images/Fb_icon.png' alt='facebook'>
-          <img src='src/images/Twitter_icon.png' alt='twitter'>
-          <img src='src/images/Mail_icon.png' alt='Maleru'>
+          <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
+          <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
+          <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru'></a>
         </div>  
       </div>
       
