--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2>Services we provide</h2>
       <img src='src/images/Line.png' class='line'>
       <p>We are working with both individuals and business fron all over the glove 
-        to create awesome websites and applications    </p>
+        to create awesome websites and applications</p>
     </div>
     <div class='container'>
       <div class="item-container">
@@ -83,7 +83,7 @@
           <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
           <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
           <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
-          <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru(seriosly:)'></a>
+          <a href ='#'><img src='src/images/Mail_icon.png' alt='mail'></a>
         </div>  
       </div>
       <div class="item-container">
@@ -94,7 +94,7 @@
           <div class="social_icons">
             <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
             <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
-            <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru'></a>
+            <a href ='#'><img src='src/images/Mail_icon.png' alt='mail'></a>
           </div>  
         </div>
       <div class="item-container">
@@ -106,7 +106,7 @@
           <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
           <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
           <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
-          <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru'></a>
+          <a href ='#'><img src='src/images/Mail_icon.png' alt='mail'></a>
         </div>  
       </div>
       <div class="item-container">
@@ -117,7 +117,7 @@
         <div class="social_icons">
           <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
           <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
-          <a href ='#'><img src='src/images/Mail_icon.png' alt='Maleru'></a>
+          <a href ='#'><img src='src/images/Mail_icon.png' alt='mail'></a>
         </div>  
       </div>
      </div>
@@ -179,9 +179,68 @@
           <h5>Blog/magazine flat ui kit </h5>
         </div>
       </div>
+      <button class='portfolio_button'>Load more projects</button>
     </div>
-    
+    <div class="what_people_say">
+      <div class="title-wrap">
+        <h2>What people say about us</h2>
+        <img src='src/images/Line.png' class='line'>
+        <p>Our clients love us!</p>
+      </div>
+      <div class="container">
+        <div class="people-wrap">
+          <div class="item-wrap">
+            <img src='/src/images/icon_small.png' alt='small_icon'>
+            <div class="people-container">
+              <q>Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas 
+              fringilla urna eu nisl scelerisque.</q>
+              <h3>Chanel Iman</h3>
+              <div class="status">Lead Designer</div>
+            </div>
+          </div>
+          <div class="item-wrap mrg">
+              <img src='/src/images/icon_small.png' alt='small_icon'>
+              <div class="people-container">
+                <q>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
+                   In condimentum facilisis porta.</q>
+                <h3>Anne Hathaway</h3>
+                <div class="status">Lead Designer at Behance</div>
+              </div>
+            </div>
+        </div> 
+        <div class="people-wrap">
+            <div class="item-wrap">
+              <img src='/src/images/icon_small.png' alt='Flag'>
+              <div class="people-container">
+                <q>Vivamus luctus urna sed urna ultricies ac tempor 
+                  dui sagittis. In condimentum facilisis porta</q>
+                <h3>Adriana Lima</h3>
+                <div class="status">Founder of Instagram</div>
+              </div>
+            </div>
+            <div class="item-wrap mrg">
+                <img src='/src/images/icon_small.png' alt='small_icon'>
+                <div class="people-container">
+                  <q>Phasellus non purus vel arcu tempor commodo. Fusce semper, 
+                    purus vel luctus molestie, risus sem cursus neque.</q>
+                  <h3>Emma Stone</h3>
+                  <div class="status">Co-Founder of Shazam</div>
+                </div>
+            </div>
+        </div>  
+      </div>
+      </div>    
+      <div class="forms">
+        <div class="title-wrap">
+          <h2>Get In Touch</h2>
+          <img src='src/images/Line.png' class='line'>
+         <p>1600 Pennsylvania Ave NW, Washington, 
+          DC 20500, United States of America. Tel: (202) 456-1111  </p>
+       </div>
 
+
+
+       </div>
 </section>
 
   
