--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
     <div class="title-wrap">
       <h2>Services we provide</h2>
       <img src='src/images/Line.png' class='line'>
-      <p>We are working with both individuals and business fron all over the glove 
-        to create awesome websites and applications</p>
+      <p>
+        We are working with both individuals and business fron all over the glove 
+        to create awesome websites and applications
+      </p>
     </div>
     <div class='container'>
       <div class="item-container">
@@ -76,9 +78,11 @@
         <img src='/src/images/avatar.png'>
         <h3>Anne Hathaway</h3>
         <div class="status">Ceo/Marketing Guru</div>
-        <p>Lorem ipsum dolor sit amet, 
+        <p>
+          Lorem ipsum dolor sit amet, 
             consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-             laoreet dolore magna.</p>
+             laoreet dolore magna.
+        </p>
         <div class="social_icons">
           <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
           <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
@@ -90,7 +94,9 @@
           <img src='/src/images/avatar.png'>
           <h3>Kate Upton</h3>
           <div class="status">Creative Director</div>
-          <p>Duis aute irure dolor in in  voluptate velit esse cillum  dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proiden</p>
+          <p>
+            Duis aute irure dolor in in  voluptate velit esse cillum  dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proiden
+          </p>
           <div class="social_icons">
             <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
             <a href ='#'><img src='src/images/LinkedIn_icon.png' alt='LinkIn'></a>
@@ -101,7 +107,9 @@
         <img src='/src/images/avatar.png'>
         <h3>Olivia Wilde</h3>
         <div class="status">Lead Designer</div>
-        <p>Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratio-ne voluptatem nesciun</p>
+        <p>
+          Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratio-ne voluptatem nesciun
+        </p>
         <div class="social_icons">
           <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
           <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
@@ -113,7 +121,9 @@
         <img src='/src/images/avatar.png'>
         <h3>Ashley Greene</h3>
         <div class="status">Ceo / Developer</div>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+        </p>
         <div class="social_icons">
           <a href ='#'><img src='src/images/Fb_icon.png' alt='facebook'></a>
           <a href ='#'><img src='src/images/Twitter_icon.png' alt='twitter'></a>
@@ -125,8 +135,10 @@
       <div class="title-wrap">
         <h2>We got skills</h2>
         <img src='src/images/Line.png' class='line'>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
-          tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+          tempor incididunt ut labore et dolore magna aliqua.
+        </p>
       </div>
       <div class='container'>
         <div class="item-container skill">
@@ -155,8 +167,10 @@
       <div class="title-wrap">
         <h2>Our portfolio</h2>
         <img src='src/images/Line.png' class='line'>
-        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet
-          consectetur, adipisci velit, sed quia non numquam</p>
+        <p>
+          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet
+          consectetur, adipisci velit, sed quia non numquam
+        </p>
       </div>
       <div class="portfolio_buttons">
         <a href='#'>All</a>
@@ -191,41 +205,49 @@
         <div class="people-wrap">
           <div class="item-wrap">
             <img src='/src/images/icon_small.png' alt='small_icon'>
-            <div class="people-container">
-              <q>Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas 
-              fringilla urna eu nisl scelerisque.</q>
+            <article>
+              <q>
+                Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas 
+              fringilla urna eu nisl scelerisque.
+              </q>
               <h3>Chanel Iman</h3>
               <div class="status">Lead Designer</div>
-            </div>
+            </article>
           </div>
           <div class="item-wrap mrg">
               <img src='/src/images/icon_small.png' alt='small_icon'>
-              <div class="people-container">
-                <q>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
-                   In condimentum facilisis porta.</q>
+              <article>
+                <q>
+                  Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
+                   In condimentum facilisis porta.
+                </q>
                 <h3>Anne Hathaway</h3>
                 <div class="status">Lead Designer at Behance</div>
-              </div>
+              </article>
             </div>
         </div> 
         <div class="people-wrap">
             <div class="item-wrap">
-              <img src='/src/images/icon_small.png' alt='Flag'>
-              <div class="people-container">
-                <q>Vivamus luctus urna sed urna ultricies ac tempor 
-                  dui sagittis. In condimentum facilisis porta</q>
+              <img src='/src/images/icon_small.png' alt='small_icon'>
+              <article>
+                <q>
+                  Vivamus luctus urna sed urna ultricies ac tempor 
+                  dui sagittis. In condimentum facilisis porta
+                </q>
                 <h3>Adriana Lima</h3>
                 <div class="status">Founder of Instagram</div>
-              </div>
+              </article>
             </div>
             <div class="item-wrap mrg">
                 <img src='/src/images/icon_small.png' alt='small_icon'>
-                <div class="people-container">
-                  <q>Phasellus non purus vel arcu tempor commodo. Fusce semper, 
-                    purus vel luctus molestie, risus sem cursus neque.</q>
+                <article>
+                  <q>
+                    Phasellus non purus vel arcu tempor commodo. Fusce semper, 
+                    purus vel luctus molestie, risus sem cursus neque.
+                  </q>
                   <h3>Emma Stone</h3>
                   <div class="status">Co-Founder of Shazam</div>
-                </div>
+                </article>
             </div>
         </div>  
       </div>
@@ -234,15 +256,31 @@
         <div class="title-wrap">
           <h2>Get In Touch</h2>
           <img src='src/images/Line.png' class='line'>
-         <p>1600 Pennsylvania Ave NW, Washington, 
-          DC 20500, United States of America. Tel: (202) 456-1111  </p>
+         <p>
+           1600 Pennsylvania Ave NW, Washington, 
+          DC 20500, United States of America. Tel: (202) 456-1111 
+         </p>
        </div>
-
-
-
+       <div class="forms-container">
+         <form>
+           <input type='text' name='name' value ='Your Name*'>
+           <input type='text' name='mail' value ='Your Email*'>
+           <textarea class='comments'>Your Comment*</textarea>
+         </form>
        </div>
+       <button class='form_button'>Send Message</button>
+      </div>
+      <footer>
+        <ul>
+          <li><a href ='#'>Facebook</a></li>
+          <li><a href ='#'>Twitter</a></li>
+          <li><a href ='#'>Google+</a></li>
+          <li><a href ='#'>LinkedIn</a></li>
+          <li><a href ='#'>Behance</a></li>
+          <li><a href ='#'>Dribbble</a></li>
+          <li><a href ='#'>GitHub</a></li>
+          </ul>
+      </footer>  
 </section>
-
-  
 </body>
 </html>
