update html, added all buttons, anchors

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               to create awesome websites and applications
             </p>
           </div>
-          <div class='container'>
+          <article class='container'>
             <div class="item-container">
               <img src='/src/images/Flag icon.png' alt='Flag'>
               <h4 class='name_service'>Branding</h4>
@@ -67,7 +67,7 @@
               <p class="service-descr">Et harum quidem rerum est et expedita 
                 distinctio. Nam libero tempore.</p>
             </div>    
-          </div>
+          </article>
         </section>
 
         <div class="team">
@@ -76,7 +76,7 @@
             <img src='src/images/Line.png' class='line'>
             <p>We are a small team of designers and developers, who help brands with big ideas.</p>
           </div>
-          <div class='container'>
+          <article class='container'>
             <div class="item-container">
               <img src='/src/images/avatar.png'>
               <h3>Anne Hathaway</h3>
@@ -131,7 +131,7 @@
                 <a href ='#'><img src='src/images/Mail_icon.png' alt='mail'></a>
               </div>
             </div>
-          </div>
+          </article>
         </div>
 
         <div class="skills">
@@ -143,7 +143,7 @@
                 tempor incididunt ut labore et dolore magna aliqua.
               </p>
             </div>
-            <div class='container'>
+            <article class='container'>
               <div class="item-container skill">
                 <div class='procents'>90%</div>
                 <img src='/src/images/blue.png' alt='90%'>
@@ -164,7 +164,7 @@
                 <img src='/src/images/orange.png' alt='85%'>
                 <h3>Ui/Ux</h3>
               </div>
-            </div>
+            </article>
         </div>
 
         <div class="portfolio">
@@ -182,7 +182,7 @@
             <a href='#'>Apps</a>
             <a href='#'>Icons</a>
           </div>
-          <div class='container'>
+          <article class='container'>
             <div class="portfolio_container">
               <img src='/src/images/portfolio_1.png'>
               <h5>Isometric perspective mock-up</h5>
@@ -196,7 +196,7 @@
               <img src='/src/images/portfolio_4.png'>
               <h5>Blog/magazine flat ui kit </h5>
             </div>
-          </div>
+          </article>
           <button class='portfolio_button'>Load more projects</button>
         </div>
 
@@ -206,7 +206,7 @@
             <img src='src/images/Line.png' class='line'>
             <p>Our clients love us!</p>
           </div>
-          <div class="container">
+          <article class="container">
             <div class="people-wrap">
               <div class="item-wrap">
                 <img src='/src/images/icon_small.png' alt='small_icon'>
@@ -255,7 +255,7 @@
                     </article>
                 </div>
             </div>  
-          </div>
+          </article>
         </div>
 
         <div class="forms">
