--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
               <h5>Blog/magazine flat ui kit </h5>
             </div>
           </article>
-          <button class='portfolio_button'>Load more projects</button>
+          <button class='portfolio_button' data-color='cyan'>Load more projects</button>
         </div>
 
         <div class="what_people_say">
